--- a/Weather App/style.css
+++ b/Weather App/style.css
@@ -31,10 +31,24 @@ body{background-color: black;
 .input{
     border: 0;
     outline:0;
-    background: #ebfffc;
     color: #555;
     padding: 10px 25px;
-    height: 60px;
+    height: 10%;
+    width: 40%;
+    border-radius: 30px;
+    flex: 1;
+    margin-right: 16px;
+    font-size: 18px;
+    
+}
+.inputContainer{
+    border: 0;
+    outline:0;
+    background:white;
+    color: #555;
+    padding: 10px 25px;
+    height: 10%;
+    width: 100%;
     border-radius: 30px;
     flex: 1;
     margin-right: 16px;
@@ -43,17 +57,21 @@ body{background-color: black;
 }
 
 .searchbtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;    
     border: 0;
     outline: 0;
-    background: #ebfffc;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
+    border-radius:50%;
+    width: 10%;
+    height: 10%;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .searchimg{
     width: 30px;
+    background: none;
     
 }
 
@@ -122,4 +140,15 @@ body{background-color: black;
     .humid, .wind{
         font-size: 15px;
     }
+}
+
+.location{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    outline: none;
+    border: none;
+    background: none;
+    margin-right: 2%;
 }
